<resources>
    <string name="app_name">Беларуск\u0456я казк\u0456</string>
    <string name="app_name2">FairyTales</string>

    <string name="read">Чытаць далей</string>

    <string name="title_one_puzzle">Загадка</string>
    <string name="title">Беларуск\u0456я казк\u0456</string>
    <string name="title_fairy_tales">Казк\u0456</string>
    <string name="title_puzzle">Загадк\u0456</string>
    <string name="title_poem">Л\u0456чылк\u0456</string>
    <string name="title_one_poem">Л\u0456чылка</string>
    <string name="title_game">Заба\u045Eлянк\u0456</string>
    <string name="title_one_game">Заба\u045Eлянка</string>
    <string name="lullaby">Калыханк\u0456</string>

    <string name="answer">answer</string>
    <string name="answer_button">Адгадка</string>
    <string name="favorite">favorite</string>
    <string name="not_favorite">Not favorite</string>
    <string name="favorite_tales">Favorite folk works</string>
    <string name="all_tales">All folk works</string>

    <string name="expanded_screen_test_tag">expanded screen</string>
    <string name="compact_screen_test_tag">compact screen</string>
    <string name="back">back</string>
    <string name="horizontal_detail_screen">Horizontal detail screen</string>
    <string name="vertical_detail_screen">Vertical detail screen</string>
    <string name="error_text">Казк\u0456\nнедзе згуб\u0456л\u0456ся</string>
    <string name="error_button_text">Шукаем</string>
    <string name="settings">settings</string>
</resources>
